--- a/style/about.css
+++ b/style/about.css
@@ -38,7 +38,7 @@
     margin: 15% 35%;
     color: white;
     background-color: blue;
-    border-radius: 100%;
+    border-radius: 20px;
     font-size: .6em;
     padding: 0px;
     text-align: center;
@@ -58,6 +58,8 @@
 
 .content .main input{
     width: 60%;
+    height: 110%;
+    border-radius: 10px;
 }
 .content #sub{
     background-color: black;
