--- a/style/support.css
+++ b/style/support.css
@@ -4,9 +4,8 @@ div.support {
     bottom: 0;
     width: 15%;
     height: 10%;
-    background-color: aqua;
+    padding: 0px;
 }
-
 .support > button {
     width: 100%;
     height: 100%;
@@ -28,14 +27,17 @@ div.support {
 .support .container {
     border: 2px solid #dedede;
     background-color: #f1f1f1;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px 0;
+    border-radius: 10px;
+    width: 60%;
+    padding: 3px;
+    margin: 3px 0;
+    clear: both;
 }
 
 .support .darker {
     border-color: #ccc;
     background-color: #ddd;
+    float: right;
 }
 
 .support .container::after {
@@ -60,24 +62,27 @@ div.support {
 
 .support .sender{
     position: absolute;
-    top: 80%;
-    width: 90%;
-    height: 100%;
+    top: 75%;
+    width: 100%;
+    height: 0px;
+    margin: 0px;
 }
 
 .support .sender button{
     position: absolute;
-    top: 7px;
-    left: 10px;
+    top: 20%;
+    left: 7%;
     width: 20px;
     height: 20px;
 }
 
 .support .sender input{
-    width: 90%;
+    width: 100%;
+    height: 20px;
     text-align: right;
     padding-left: 30px;
-    margin: 5px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .support .sender form{
@@ -85,7 +90,23 @@ div.support {
 }
 
 .support #messages{
-    overflow-y: scroll;
-    height: 50%;
-    margin-bottom: 20%;
+    height:100%;
+    width: 100%;
+    padding: 10px 10px 10px 2px;
+    overflow-y: auto;
+    margin: 0px;
+    background-color: aliceblue;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+}
+.support #messenger{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    margin-bottom:5% 0% 0% 0%;
+}
+
+.support #minus_btn{
+    height: 20px;
+    width: 20px;
 }
